--- a/Styling/style.css
+++ b/Styling/style.css
@@ -61,6 +61,10 @@ article ul li{
     line-height: 30px;
 }
 
+article figure img{
+    transform: rotate(270deg);
+}
+
 ol{
     margin: 0;
     list-style: none;
@@ -79,6 +83,8 @@ h1 {
     margin: 30px auto;
     text-align: justify;
     line-height: 30px;
+    font-size: 30px;
+    text-transform: capitalize
   }
 
 h2 {
@@ -86,6 +92,8 @@ h2 {
     margin: 30px auto;
     text-align: justify;
     line-height: 30px;
+    font-size: 25px;
+    text-transform: capitalize
   }
 
 h3 {
@@ -93,6 +101,8 @@ h3 {
     margin: 30px auto;
     text-align: justify;
     line-height: 30px;
+    font-size: 20px;
+    text-transform: capitalize
   }  
 
 img {
@@ -143,3 +153,10 @@ article table{
     line-height: 30px;
 }
 
+article figcaption{
+    width: 900px;
+    margin: 30px auto;
+    text-align:center;
+    font-size: 20px;
+    line-height: 30px;
+}
