--- a/Styling/style.css
+++ b/Styling/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    padding-top: 30px;
+    padding-top:1%;
 }
 
 nav {
@@ -8,8 +8,8 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 40px;
-    padding: 10px 100px;
+    height: 4.5%;
+    padding: 0.5% 5%;
     box-sizing: border-box;
     transition: .3s;
     background: gold;
@@ -31,21 +31,41 @@ nav ul{
 
 nav ul li{
     list-style: none;
+    padding: 0;
 }
 
 nav ul li a{
     color: darkblue;
-    padding: 12px 30px;
+    padding: 1vw;
     text-transform: uppercase;
 }
 
 nav ul li a.active{
     background: gray;
     color: darkblue;
-    border-radius: 6px;
+    border-radius: 1%;
 }  
+
+nav ul li a:hover{
+    color: blue;
+    background-color: darkgray;
+} 
+
 nav ul li a:focus{
     outline: none; 
+}
+
+nav ul li button{
+    box-sizing: content-box;
+    width: 150%;
+    height: 100%;
+    color: darkblue;
+    background-color: gray;
+}
+nav ul li button:hover{
+
+    color: blue;
+    background-color: darkgray;
 }
 
 article ul{
@@ -55,14 +75,20 @@ article ul{
 
 article ul li{
     list-style: decimal;
-    width: 900px;
-    margin: 30px auto;
-    text-align: justify;
-    line-height: 30px;
+    width: 55%;
+    margin: auto;
 }
 
-article figure img{
+article figure img.rotate270{
     transform: rotate(270deg);
+}
+
+article figure img.rotate180{
+    transform: rotate(180deg);
+}
+
+article figure img.rotate90{
+    transform: rotate(90deg);
 }
 
 ol{
@@ -72,35 +98,32 @@ ol{
 
 ol li{
     list-style: decimal;
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
     line-height: 30px;
 }
 
 h1 {
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
-    line-height: 30px;
     font-size: 30px;
     text-transform: capitalize
   }
 
 h2 {
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
-    line-height: 30px;
     font-size: 25px;
     text-transform: capitalize
   }
 
 h3 {
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
-    line-height: 30px;
     font-size: 20px;
     text-transform: capitalize
   }  
@@ -113,16 +136,16 @@ img {
     padding-bottom: 5px;
 }  
 
+
 section.content{
     margin-top:80px;
   }
   
 .content p{
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
     font-size: 20px;
-    line-height: 30px;
   }
 
 article .acontent{
@@ -130,33 +153,29 @@ article .acontent{
 }
 
 .acontent p{
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
     font-size: 20px;
-    line-height: 30px;
 }
 
 .acontent aside{
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
     font-size: 12px;
-    line-height: 30px;
 }
 
 article table{
-    width: 900px;
-    margin: 30px auto;
+    width: 55%;
+    margin: 5% auto;
     text-align: justify;
     font-size: 20px;
-    line-height: 30px;
 }
 
 article figcaption{
-    width: 900px;
-    margin: 30px auto;
-    text-align:center;
+    width: 55%;
+    margin: 5% auto;
+    text-align: center;
     font-size: 20px;
-    line-height: 30px;
 }
